# Tapo-Camera

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt  run.py  video_stream.py
Document/: PRACA DYPLOMOWA Inżynierska - Marcin Mazur - “Wykorzystanie oprogramowania Open-Source do współpracy z kamerami TP-Link TAPO”.docx
Paper/: Marcin_Mazur_242467.tex  PRACA DYPLOMOWA Inżynierska - Marcin Mazur - “Wykorzystanie oprogramowania Open-Source do współpracy z kamerami TP-Link TAPO” (AutoRecovered).docx  PRACA DYPLOMOWA Inżynierska - Marcin Mazur - “Wykorzystanie oprogramowania Open-Source do współpracy z kamerami TP-Link TAPO”.docx  Prompt for Engeneering Thisis.txt  cel_i_zakres.tex  literatura.bib  main.tex  podsumowanie.tex  rozdzial1.tex  rozdzial2.tex  rozdzial3.tex  rozdzial4.tex  streszczenieislowakluczowe.tex  titlepage.tex  wstep.tex
Praca/: cel_i_zakres.tex  main.tex  podsumowanie.tex  rozdzial1.tex  rozdzial2.tex  rozdzial3.tex  streszczenieislowakluczowe.tex  titlepage.tex  wstep.tex  wykazy.tex
app/: __init__.py  recording.py  recordings_routes.py  routes.py
app/static/: video.html
app/templates/: connection_error.html  index.html  recordings.html
