[project]
name = "tapo-camera"
version = "0.1.1"
description = "A TP-Link TAPO camera streaming application using Flask and Flask-SocketIO."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-socketio>=5.5.1",
    "markup>=0.2.2",
    "moviepy>=2.2.1",
    "opencv-python>=4.12.0.88",
    "pytapo>=3.3.49",
    "werkzeug>=3.1.3",
]
